--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
-# Compiled class file
+.idea
+.metadata
+*.iml
+*.ipr
+*.iws
+*./.classpath
+*.classpath
+*.project
+*/.setting
+*/out
+out
+lib/*.jar
 *.class
 
-# Log file
-*.log
+target/
+out/
+build/
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
