--- a/example-druid/example-druid-simple-springboot/pom.xml
+++ b/example-druid/example-druid-simple-springboot/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>example-druid-springmvc</artifactId>
+    <artifactId>example-druid-simple-springboot</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
