--- a/example-dubbo/example-dubbo-client/pom.xml
+++ b/example-dubbo/example-dubbo-client/pom.xml
@@ -9,8 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>example-dubbo-service</artifactId>
+    <artifactId>example-dubbo-client</artifactId>
 
+    <name>example-dubbo-client</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
@@ -18,6 +19,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>com.alibaba.spring.boot</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
@@ -53,11 +55,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
         </dependency>
-
     </dependencies>
 
     <build>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+        <pluginManagement>
             <plugins>
 
             </plugins>
