--- a/example-druid/pom.xml
+++ b/example-druid/pom.xml
@@ -82,10 +82,10 @@
             </dependency>
 
             <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-properties-migrator</artifactId>-->
-                <!--<version>2.0.0.RELEASE</version>-->
-                <!--&lt;!&ndash;<scope>runtime</scope>&ndash;&gt;-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-properties-migrator</artifactId>-->
+            <!--<version>2.0.0.RELEASE</version>-->
+            <!--&lt;!&ndash;<scope>runtime</scope>&ndash;&gt;-->
             <!--</dependency>-->
 
             <dependency>
@@ -119,15 +119,15 @@
             </dependency>
 
             <!--<dependency>-->
-                <!--<groupId>org.springframework</groupId>-->
-                <!--<artifactId>spring-webmvc</artifactId>-->
-                <!--<version>5.0.4.RELEASE</version>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-webmvc</artifactId>-->
+            <!--<version>5.0.4.RELEASE</version>-->
             <!--</dependency>-->
 
             <!--<dependency>-->
-                <!--<groupId>org.springframework</groupId>-->
-                <!--<artifactId>spring-context</artifactId>-->
-                <!--<version>5.0.4.RELEASE</version>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-context</artifactId>-->
+            <!--<version>5.0.4.RELEASE</version>-->
             <!--</dependency>-->
 
             <dependency>
@@ -158,6 +158,20 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.11</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.el</groupId>
+                <artifactId>javax.el-api</artifactId>
+                <version>3.0.0</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
