--- a/example-druid/pom.xml
+++ b/example-druid/pom.xml
@@ -40,6 +40,13 @@
             </dependency>
 
             <dependency>
+                <groupId>com.dianping.cat</groupId>
+                <artifactId>cat-client</artifactId>
+                <version>1.4.0</version>
+                <!--<version>2.15.2</version>-->
+            </dependency>
+
+            <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>1.1.9</version>
