--- a/example-mybatis/example-mybatis-spingboot/pom.xml
+++ b/example-mybatis/example-mybatis-spingboot/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <artifactId>example-mybatis-spingboot</artifactId>
 
